# prompt

./: .gitignore  .promptignore  AGENTS.md  Cargo.toml  Justfile  LICENSE.txt  README.md  deny.toml  justfile
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  dependencies.yml  release.yml
benches/: split_tokenizing.rs
src/: config.rs  discovery.rs  files.rs  lib.rs  main.rs  run.rs  settings.rs  tokenizer.rs  tree.rs
