[package]
name = "prompt"
version = "0.1.0-dev"
edition = "2024"
description = "A CLI tool to read files into a prompt."
readme = "README.md"
repository = "https://github.com/jameshiew/prompt"
license = "MIT"
publish = false

[[bench]]
harness = false
name = "split_tokenizing"

[dependencies]
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dashmap = "6"
glob = "0.3"
home = "0.5"
ignore = "0.4"
infer = "0.19.0"
ptree = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
strum = { version = "0.27", features = ["derive"] }
text-splitter = { version = "0.29", features = ["tiktoken-rs"] }
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lints.clippy]
nursery = "warn"

[profile.profiling]
inherits = "release"
debug = 1
